--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "react-modal": "^3.12.1",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
