--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "firebase": "^8.2.0",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "react-modal": "^3.12.1",
-    "react-reveal": "^1.2.2"
+    "react-redux": "^7.2.2",
+    "react-reveal": "^1.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
