--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "dotenv": "^8.2.0",
     "firebase": "^8.2.0",
     "next": "10.0.3",
     "react": "17.0.1",
