--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "react-modal": "^3.12.1",
-    "react-redux": "^7.2.2",
-    "react-reveal": "^1.2.2",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
