--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "autoprefixer": "^10.1.0",
     "dotenv": "^8.2.0",
     "firebase": "^8.2.0",
     "next": "10.0.3",
+    "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "react-modal": "^3.12.1",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
