--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "toasted-notes": "^3.2.0"
   },
   "devDependencies": {
+    "emailjs-com": "^2.6.4",
     "eslint": "^7.15.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.21.5"
+    "eslint-plugin-react": "^7.21.5",
+    "jspdf": "^2.2.0",
+    "react-hook-form": "^6.13.1"
   }
 }
