--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^8.2.0",
     "next": "10.0.3",
+    "node-fetch": "^2.6.1",
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "^17.0.1",
@@ -28,7 +29,6 @@
     "eslint": "^7.15.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.21.5",
-    "jspdf": "^2.2.0",
     "react-hook-form": "^6.13.1"
   }
 }
